# ros_arm_moveit

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml
include/: mycobot_moveit_real.h  mycobot_serial.h
launch/: mycobot_arm_moveit.launch  mycobot_display.launch
launch/rviz/: mycobot_arm_moveit.rviz  mycobot_display.rviz
src/: arm_real_node.cpp  mycobot_control.cpp
urdf/: mycobot_urdf.xacro
