<?xml version="1.0"?>
<package format="2">
  <name>ros_arm_moveit</name>
  <version>1.0.0</version>
  <description>The ros_arm_moveit package</description>

  <maintainer email="441325961@qq.com">kevin</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>aibot_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>position_controllers</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>aibot_msgs</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>position_controllers</build_export_depend>
  <build_export_depend>joint_trajectory_controller</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>aibot_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <export>

  </export>
</package>
